fix: Wrong background color on site footer

--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -14,7 +14,6 @@
  * Within any `document` or `application`, the author **SHOULD** mark no more than one element with the `contentinfo` role.
  */
 .main-footer {
-  @include my.themed-color('background-color', ('brand', 'secondary'));
   @include my.themed-asset('background-image', 'footer.svg');
 
   padding-top: my.$gutter * 5;
@@ -22,6 +21,7 @@
   font-size: my.ms-step(-1);
   color: my.palette('text', 'light');
 
+  background-color: my.palette('neutral', 'x-dark');
   background-position: right my.$gutter * 0.5 top;
   background-size: 164px 110px;
   border-top-right-radius: 20px;
